
* Show pane-focus with blue bar at top, swap focus with M-space. The
  keybinding is now located at 'pane.swap_focus'.

* Add optional drop-down terminal ('|') which has session-persistent
  working directory. Will silently be disabled if VTE is missing.

* Delay sending of message with configured time, in order to be able to
  cancel wrongly sent messages.

== v0.7 / 2017-01-02

* Messages are marked unread after a delay (default 2 sec) in
  thread-view. They can be manually toggled with 'N'.

* Edit drafts using an external editor (optional).

* Filter thread-index incrementally using 'C-f'.

* Use Tab and S-Tab to jump between unread messages in thread-view.

* Yank raw or decoded message or element to primary clipboard with 'Y'
  or 'y', useful for applying patches.

* Cancel sending with Ctrl + C.

* Yank the Message-ID to the primary clipboard with C-y.

* Make id:Message-ID urls clickable.

* Make Message-ID customizable, and User-Agent optional. These may also
  be customized with a plugin.

* Use Boost::log for logging.

* Some hints about usage are shown (level of detail can be configured)

* 'c' in thread-view composes message to sender (or receiver if sender
    is you).

* Taeer Bar-Yam <taeer@necsi.edu>: Allow any key name defined by GDK to
  be entered.

* Thread-view: '*' toggle 'flagged' on message, 'a' toggle inbox on
  whole thread.

* Removed MathJax support, since it is not widely used. Can be enabled
  manually by adding sourcing the script in the thread-view theme file.

* When replying, match encryption / signature level.

* Open element with 'Space', also in editor.

* Check for missing fields and for attachment words before sending.

* Kim Ebert: Make sure all messages are loaded.

* M. Dietrich, G. Hope: Fix buggy quoting of arbitrarily spaced '>'s.

* Close thread-view after deleting draft.

* Hugo Roy: Improve attachment, mime-message, and url display.

== v0.6 / 2016-07-23
